[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-agent-autogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.6.1",
    "autogen-core>=0.6.1",
    "autogen-ext[docker,openai]>=0.6.1",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
]

[tool.setuptools]
packages = ["src"]